--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -3,12 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Pharma_Dashboard_Flip</title>
-
-  <!-- 🔧 Prevent caching -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-
   <style>
     html, body {
       margin: 0;
@@ -17,37 +11,50 @@
       overflow: hidden;
       background: black;
       font-family: Arial, sans-serif;
-      perspective: 1200px;
+      perspective: 1500px;
     }
 
-    .screen {
+    .flippable {
       position: absolute;
-      width: 100%;
-      height: 100%;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
       opacity: 0;
-      transform: rotateY(180deg);
       transform-origin: center;
-      transition: opacity 1.5s ease-in-out, transform 4s ease-in-out;
-      background: black;
+      transform: rotateY(15deg) scale(1.02);
+      transition:
+        opacity 2s ease-in-out,
+        transform 2s ease-in-out;
       backface-visibility: hidden;
+      display: none;
     }
 
-    .active {
+    .flippable.active {
       opacity: 1;
-      transform: rotateY(0deg);
+      transform: rotateY(0deg) scale(1);
       z-index: 2;
+      display: block;
     }
 
     iframe {
+      border: none;
       width: 100%;
       height: 100%;
-      border: none;
       background: black;
     }
 
-    header {
+    #imageOverlay {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      z-index: 1;
+      background: black;
+      color: white;
+    }
+
+    #imageOverlay header {
       position: absolute;
       top: 0;
       left: 0;
@@ -59,121 +66,160 @@
       font-weight: bold;
       color: #00ffcc;
       text-shadow: 1px 1px 4px black;
-      border-bottom: 2px solid #00ffcc;
       z-index: 3;
+      border-bottom: 2px solid #00ffcc;
+    }
+
+    #imageOverlay img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0.85;
+      z-index: 2;
+      animation: slowZoom 20s ease-in-out infinite alternate;
+    }
+
+    @keyframes slowZoom {
+      from { transform: scale(1); }
+      to { transform: scale(1.05); }
     }
   </style>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", initializeDashboard);
+
+    function initializeDashboard() {
+      const frame = document.getElementById("dashboardFrame");
+      const overlay = document.getElementById("imageOverlay");
+      const overlayTitle = document.getElementById("overlayTitle");
+
+      document.querySelectorAll(".flippable").forEach(el => el.style.display = "block");
+
+      const dashboards = [
+        { url: "Pharma_Telesales_Statistics.html", duration: 150000 }
+      ];
+
+      let index = parseInt(localStorage.getItem("currentDashboardIndex")) || 0;
+      let isBanner = localStorage.getItem("isBanner") === "true";
+      let rotationTimer;
+      let timeUpdater;
+
+      function getFormattedTime() {
+        const now = new Date();
+        return now.toLocaleString('en-GB', {
+          day: '2-digit',
+          month: 'long',
+          year: 'numeric',
+          hour: '2-digit',
+          minute: '2-digit',
+          second: '2-digit'
+        }).replace(',', '');
+      }
+
+      function startLiveClock() {
+        if (timeUpdater) clearInterval(timeUpdater);
+        timeUpdater = setInterval(() => {
+          overlayTitle.textContent =
+            `PHARMA_FLIP SALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
+        }, 1000);
+      }
+
+      function loadDashboard(i) {
+        frame.src = dashboards[i].url + "?v=" + new Date().getTime();
+      }
+
+      function showDashboard(i) {
+        localStorage.setItem("isBanner", "false");
+        localStorage.setItem("currentDashboardIndex", i);
+        overlay.classList.remove("active");
+        setTimeout(() => {
+          loadDashboard(i);
+          frame.classList.add("active");
+        }, 1000);
+      }
+
+      function showBanner() {
+        localStorage.setItem("isBanner", "true");
+        frame.classList.remove("active");
+        setTimeout(() => {
+          startLiveClock();
+          overlay.classList.add("active");
+        }, 1000);
+      }
+
+      function rotate() {
+        if (index < dashboards.length) {
+          showDashboard(index);
+          rotationTimer = setTimeout(() => {
+            index++;
+            rotate();
+          }, dashboards[index].duration);
+        } else {
+          showBanner();
+          rotationTimer = setTimeout(() => {
+            index = 0;
+            localStorage.setItem("currentDashboardIndex", index);
+            localStorage.setItem("isBanner", "false");
+            rotate();
+          }, 30000);
+        }
+      }
+
+      if (isBanner) {
+        showBanner();
+        rotationTimer = setTimeout(() => {
+          index = 0;
+          localStorage.setItem("currentDashboardIndex", index);
+          localStorage.setItem("isBanner", "false");
+          rotate();
+        }, 30000);
+      } else {
+        showDashboard(index);
+        rotationTimer = setTimeout(() => {
+          index++;
+          rotate();
+        }, dashboards[index].duration);
+      }
+
+      window.addEventListener("beforeunload", () => {
+        localStorage.setItem("currentDashboardIndex", index);
+        localStorage.setItem("isBanner", overlay.classList.contains("active"));
+      });
+
+      // --- 🔄 AUTO REFRESH MECHANISM (added) ---
+      let lastCheck = null;
+
+      async function checkForUpdate() {
+        try {
+          const res = await fetch("refresh_all.json?nocache=" + new Date().getTime());
+          if (!res.ok) return;
+          const data = await res.json();
+
+          if (lastCheck && data.timestamp !== lastCheck) {
+            console.log("Detected update from R script — refreshing dashboard...");
+            location.reload(true);
+          }
+          lastCheck = data.timestamp;
+        } catch (e) {
+          console.warn("Update check failed:", e);
+        }
+      }
+
+      // Check every 10 seconds for updates
+      setInterval(checkForUpdate, 10000);
+    }
+  </script>
 </head>
 
 <body>
+  <iframe id="dashboardFrame" class="flippable"></iframe>
 
-  <div class="screen active" id="pharmaScreen">
-    <iframe id="pharmaFrame"></iframe>
-  </div>
-
-  <div class="screen" id="bannerScreen">
-    <iframe id="bannerFrame"></iframe>
+  <div id="imageOverlay" class="flippable">
+    <img src="Logo_Title.jpg" alt="Telesales Performance">
     <header id="overlayTitle"></header>
   </div>
-
-  <script>
-    const pharmaScreen = document.getElementById("pharmaScreen");
-    const bannerScreen = document.getElementById("bannerScreen");
-    const overlayTitle = document.getElementById("overlayTitle");
-    const pharmaFrame = document.getElementById("pharmaFrame");
-    const bannerFrame = document.getElementById("bannerFrame");
-
-    const pharmaDuration = 120000; // 2 min
-    const bannerDuration = 10000;  // 10 sec
-    let showingBanner = false;
-    let flipTimer = null;
-
-    // 🧠 Hard reload (WallPanel compatible)
-    function hardReloadFrame(frame, url) {
-      try {
-        const iframeWin = frame.contentWindow;
-        if (iframeWin && iframeWin.location) {
-          iframeWin.location.replace(url);
-        } else {
-          frame.src = url;
-        }
-      } catch {
-        frame.src = url;
-      }
-    }
-
-    // Load both on startup
-    function loadPharma() { hardReloadFrame(pharmaFrame, "Pharma_Telesales_Statistics.html"); }
-    function loadBanner() { hardReloadFrame(bannerFrame, "Banner.html"); }
-    loadPharma();
-    loadBanner();
-
-    // 🕒 Dynamic header
-    function updateHeader() {
-      const now = new Date();
-      const formattedDate = now.toLocaleString('en-GB', {
-        day: '2-digit',
-        month: 'long',
-        year: 'numeric',
-        hour: '2-digit',
-        minute: '2-digit',
-        second: '2-digit'
-      }).replace(',', '');
-      overlayTitle.textContent =
-        `PHARMA TELESALES PERFORMANCE AS AT ${formattedDate.toUpperCase()} | # OPERATION NIGHT HAMMER`;
-    }
-    setInterval(updateHeader, 1000);
-    updateHeader();
-
-    // 🌀 Flip logic
-    function switchScreens() {
-      if (showingBanner) {
-        // Switch to dashboard
-        bannerScreen.classList.remove("active");
-        pharmaScreen.classList.add("active");
-        showingBanner = false;
-        hardReloadFrame(pharmaFrame, "Pharma_Telesales_Statistics.html"); // hard refresh data
-        localStorage.setItem('lastFlip_pharma', Date.now());
-        flipTimer = setTimeout(switchScreens, pharmaDuration);
-      } else {
-        // Switch to banner
-        pharmaScreen.classList.remove("active");
-        bannerScreen.classList.add("active");
-        showingBanner = true;
-        hardReloadFrame(bannerFrame, "Banner.html"); // hard refresh banner
-        localStorage.setItem('lastFlip_pharma', Date.now());
-        flipTimer = setTimeout(switchScreens, bannerDuration);
-      }
-    }
-
-    // 🔄 Resume last phase after reload
-    const lastFlip = localStorage.getItem('lastFlip_pharma');
-    if (lastFlip) {
-      const elapsed = Date.now() - lastFlip;
-      const totalCycle = pharmaDuration + bannerDuration;
-      const modTime = elapsed % totalCycle;
-
-      if (modTime < pharmaDuration) {
-        pharmaScreen.classList.add("active");
-        bannerScreen.classList.remove("active");
-        showingBanner = false;
-        flipTimer = setTimeout(switchScreens, pharmaDuration - modTime);
-      } else {
-        pharmaScreen.classList.remove("active");
-        bannerScreen.classList.add("active");
-        showingBanner = true;
-        flipTimer = setTimeout(switchScreens, totalCycle - modTime);
-      }
-    } else {
-      pharmaScreen.classList.add("active");
-      bannerScreen.classList.remove("active");
-      showingBanner = false;
-      localStorage.setItem('lastFlip_pharma', Date.now());
-      flipTimer = setTimeout(switchScreens, pharmaDuration);
-    }
-  </script>
-
 </body>
 </html>
-
-
