--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -14,42 +14,47 @@
       perspective: 1500px;
     }
 
-    .flip-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      perspective: 1500px;
-    }
-
-    .flipper {
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      transition: transform 2s ease-in-out;
-      position: relative;
-    }
-
-    .flip { transform: rotateY(180deg); }
-
-    .front, .back {
+    .flippable {
       position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
       top: 0;
       left: 0;
-    }
-
-    .back { transform: rotateY(180deg); }
-
-    iframe {
       width: 100%;
       height: 100%;
+      opacity: 0;
+      transform-origin: center;
+      transform: rotateY(15deg) scale(1.02);
+      transition:
+        opacity 2s ease-in-out,
+        transform 2s ease-in-out;
+      backface-visibility: hidden;
+      display: none;
+    }
+
+    .flippable.active {
+      opacity: 1;
+      transform: rotateY(0deg) scale(1);
+      z-index: 2;
+      display: block;
+    }
+
+    iframe {
       border: none;
+      width: 100%;
+      height: 100%;
       background: black;
     }
 
-    header {
+    #imageOverlay {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      z-index: 1;
+      background: black;
+      color: white;
+    }
+
+    #imageOverlay header {
       position: absolute;
       top: 0;
       left: 0;
@@ -61,103 +66,160 @@
       font-weight: bold;
       color: #00ffcc;
       text-shadow: 1px 1px 4px black;
+      z-index: 3;
       border-bottom: 2px solid #00ffcc;
+    }
+
+    #imageOverlay img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0.85;
       z-index: 2;
+      animation: slowZoom 20s ease-in-out infinite alternate;
+    }
+
+    @keyframes slowZoom {
+      from { transform: scale(1); }
+      to { transform: scale(1.05); }
     }
   </style>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", initializeDashboard);
+
+    function initializeDashboard() {
+      const frame = document.getElementById("dashboardFrame");
+      const overlay = document.getElementById("imageOverlay");
+      const overlayTitle = document.getElementById("overlayTitle");
+
+      document.querySelectorAll(".flippable").forEach(el => el.style.display = "block");
+
+      const dashboards = [
+        { url: "Beibora_Telesales_Statistics.html", duration: 120000 }
+      ];
+
+      let index = parseInt(localStorage.getItem("currentDashboardIndex")) || 0;
+      let isBanner = localStorage.getItem("isBanner") === "true";
+      let rotationTimer;
+      let timeUpdater;
+
+      function getFormattedTime() {
+        const now = new Date();
+        return now.toLocaleString('en-GB', {
+          day: '2-digit',
+          month: 'long',
+          year: 'numeric',
+          hour: '2-digit',
+          minute: '2-digit',
+          second: '2-digit'
+        }).replace(',', '');
+      }
+
+      function startLiveClock() {
+        if (timeUpdater) clearInterval(timeUpdater);
+        timeUpdater = setInterval(() => {
+          overlayTitle.textContent =
+            `BEIBORA_FLIP SALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
+        }, 1000);
+      }
+
+      function loadDashboard(i) {
+        frame.src = dashboards[i].url + "?v=" + new Date().getTime();
+      }
+
+      function showDashboard(i) {
+        localStorage.setItem("isBanner", "false");
+        localStorage.setItem("currentDashboardIndex", i);
+        overlay.classList.remove("active");
+        setTimeout(() => {
+          loadDashboard(i);
+          frame.classList.add("active");
+        }, 1000);
+      }
+
+      function showBanner() {
+        localStorage.setItem("isBanner", "true");
+        frame.classList.remove("active");
+        setTimeout(() => {
+          startLiveClock();
+          overlay.classList.add("active");
+        }, 1000);
+      }
+
+      function rotate() {
+        if (index < dashboards.length) {
+          showDashboard(index);
+          rotationTimer = setTimeout(() => {
+            index++;
+            rotate();
+          }, dashboards[index].duration);
+        } else {
+          showBanner();
+          rotationTimer = setTimeout(() => {
+            index = 0;
+            localStorage.setItem("currentDashboardIndex", index);
+            localStorage.setItem("isBanner", "false");
+            rotate();
+          }, 30000);
+        }
+      }
+
+      if (isBanner) {
+        showBanner();
+        rotationTimer = setTimeout(() => {
+          index = 0;
+          localStorage.setItem("currentDashboardIndex", index);
+          localStorage.setItem("isBanner", "false");
+          rotate();
+        }, 30000);
+      } else {
+        showDashboard(index);
+        rotationTimer = setTimeout(() => {
+          index++;
+          rotate();
+        }, dashboards[index].duration);
+      }
+
+      window.addEventListener("beforeunload", () => {
+        localStorage.setItem("currentDashboardIndex", index);
+        localStorage.setItem("isBanner", overlay.classList.contains("active"));
+      });
+
+      // --- 🔄 AUTO REFRESH MECHANISM (added) ---
+      let lastCheck = null;
+
+      async function checkForUpdate() {
+        try {
+          const res = await fetch("refresh_all.json?nocache=" + new Date().getTime());
+          if (!res.ok) return;
+          const data = await res.json();
+
+          if (lastCheck && data.timestamp !== lastCheck) {
+            console.log("Detected update from R script — refreshing dashboard...");
+            location.reload(true);
+          }
+          lastCheck = data.timestamp;
+        } catch (e) {
+          console.warn("Update check failed:", e);
+        }
+      }
+
+      // Check every 10 seconds for updates
+      setInterval(checkForUpdate, 10000);
+    }
+  </script>
 </head>
 
 <body>
-  <div class="flip-container">
-    <div class="flipper" id="flipper">
-      <div class="front">
-        <iframe id="beiboraFrame"></iframe>
-      </div>
-      <div class="back">
-        <iframe id="bannerFrame"></iframe>
-        <header id="overlayTitle"></header>
-      </div>
-    </div>
+  <iframe id="dashboardFrame" class="flippable"></iframe>
+
+  <div id="imageOverlay" class="flippable">
+    <img src="Logo_Title.jpg" alt="Telesales Performance">
+    <header id="overlayTitle"></header>
   </div>
-
-  <script>
-    const flipper = document.getElementById("flipper");
-    const overlayTitle = document.getElementById("overlayTitle");
-    const beiboraFrame = document.getElementById("beiboraFrame");
-    const bannerFrame = document.getElementById("bannerFrame");
-
-    const dashboards = [
-      { frame: beiboraFrame, url: "Beibora_Telesales_Statistics.html", duration: 120000 }, // dashboard
-      { frame: bannerFrame, url: "Banner.html", duration: 10000 }                          // banner
-    ];
-
-    let index = 0;
-    let rotationTimer = null;
-
-    // ⏰ Update banner time header
-    function getFormattedTime() {
-      const now = new Date();
-      return now.toLocaleString('en-GB', {
-        day: '2-digit',
-        month: 'long',
-        year: 'numeric',
-        hour: '2-digit',
-        minute: '2-digit',
-        second: '2-digit'
-      }).replace(',', '');
-    }
-
-    function updateHeader() {
-      overlayTitle.textContent =
-        `BEIBORA TELESALES PERFORMANCE AS AT ${getFormattedTime().toUpperCase()} | # OPERATION NIGHT HAMMER`;
-    }
-    setInterval(updateHeader, 1000);
-    updateHeader();
-
-    // 🧠 Force reload function that works in WallPanel
-    function hardReloadFrame(frame, url) {
-      try {
-        const iframeWin = frame.contentWindow;
-        // Force reload if possible
-        if (iframeWin && iframeWin.location) {
-          iframeWin.location.replace(url);
-        } else {
-          // fallback
-          frame.src = url;
-        }
-      } catch {
-        // fallback for security sandbox
-        frame.src = url;
-      }
-    }
-
-    // Show dashboard or banner
-    function showIndex(i) {
-      if (rotationTimer) clearTimeout(rotationTimer);
-      index = i;
-
-      if (index === 0) {
-        // 🧠 Always hard-reload dashboard after banner
-        flipper.classList.remove("flip");
-        hardReloadFrame(beiboraFrame, dashboards[0].url);
-      } else {
-        // Show banner normally
-        flipper.classList.add("flip");
-        hardReloadFrame(bannerFrame, dashboards[1].url);
-      }
-
-      const nextIndex = (index + 1) % dashboards.length;
-      rotationTimer = setTimeout(() => showIndex(nextIndex), dashboards[index].duration);
-    }
-
-    // Start cycle
-    function startRotation() {
-      hardReloadFrame(beiboraFrame, dashboards[0].url);
-      hardReloadFrame(bannerFrame, dashboards[1].url);
-      rotationTimer = setTimeout(() => showIndex(1), dashboards[0].duration);
-    }
-
-    startRotation();
-  </script>
 </body>
 </html>
