--- a/Pharma_Flip_Updated.html
+++ b/Pharma_Flip_Updated.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pharma_Dashboard_Flip</title>
+  <title>Pharma_Dashboard_Flip_Updated</title>
   <style>
     html, body {
       margin: 0;
