--- a/Beibora_Flip_Updated.html
+++ b/Beibora_Flip_Updated.html
@@ -135,7 +135,7 @@
             minute: "2-digit",
             second: "2-digit"
           }).replace(",", "");
-          bannerTitle.textContent = `PHARMA_FLIP SALES PERFORMANCE AS AT ${now} | # OPERATION NIGHT HAMMER`;
+          bannerTitle.textContent = `BEIBORA FLIP UPDATED SALES PERFORMANCE AS AT ${now} | # OPERATION NIGHT HAMMER`;
         };
         update();
         setInterval(update, 1000);
