--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -99,7 +99,8 @@
       document.querySelectorAll(".flippable").forEach(el => el.style.display = "block");
 
       const dashboards = [
-        { url: "Pharma_Telesales_Statistics.html", duration: 150000 }
+        { url: "Pharma_Telesales_Statistics.html", duration: 20000 }
+        { url: "Pharma_CRO_Statistics.html", duration: 20000 }
       ];
 
       let index = parseInt(localStorage.getItem("currentDashboardIndex")) || 0;
