--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -99,7 +99,8 @@
       document.querySelectorAll(".flippable").forEach(el => el.style.display = "block");
 
       const dashboards = [
-        { url: "Beibora_Telesales_Statistics.html", duration: 120000 }
+        { url: "Beibora_Telesales_Statistics.html", duration: 20000 }
+        { url: "Beibora_CRO_Statistics.html", duration: 20000 }
       ];
 
       let index = parseInt(localStorage.getItem("currentDashboardIndex")) || 0;
@@ -223,3 +224,4 @@
   </div>
 </body>
 </html>
+
