Fix syntax error in dashboards array

--- a/Beibora_Flip_Updated.html
+++ b/Beibora_Flip_Updated.html
@@ -96,6 +96,7 @@
       // List of dashboards
       const dashboards = [
         { url: "Beibora_Telesales_Statistics.html", duration: 120000 }
+        { url: "Beibora_CRO_Statistics.html", duration: 150000 }
       ];
 
       let index = 0;
