Change duration for Pharma_Telesales_Statistics
Updated duration for Pharma_Telesales_Statistics dashboard.

--- a/Pharma_Flip_Updated.html
+++ b/Pharma_Flip_Updated.html
@@ -95,7 +95,8 @@
 
       // List of dashboards
       const dashboards = [
-        { url: "Pharma_Telesales_Statistics.html", duration: 150000 }
+        { url: "Pharma_Telesales_Statistics.html", duration: 20000 }
+        { url: "Pharma_CRO_Statistics.html", duration: 20000 }
       ];
 
       let index = 0;
