--- a/Pharma_Flip_Updated.html
+++ b/Pharma_Flip_Updated.html
@@ -95,7 +95,7 @@
 
       // List of dashboards
       const dashboards = [
-        { url: "Pharma_Telesales_Statistics.html", duration: 20000 }
+        { url: "Pharma_Telesales_Statistics.html", duration: 20000 },
         { url: "Pharma_CRO_Statistics.html", duration: 20000 }
       ];
 
