--- a/Beibora_Flip_Updated.html
+++ b/Beibora_Flip_Updated.html
@@ -95,8 +95,8 @@
 
       // List of dashboards
       const dashboards = [
-        { url: "Beibora_Telesales_Statistics.html", duration: 120000 }
-        { url: "Beibora_CRO_Statistics.html", duration: 150000 }
+        { url: "Beibora_Telesales_Statistics.html", duration: 120000 },
+        { url: "Beibora_CRO_Statistics.html", duration: 20000 }
       ];
 
       let index = 0;
